--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,3 @@
-/input/
+/pant_figure.json
 /test/
-/Pentagon.json
-/utilities/
-/reflectedtraingle.json 
-/testing.json 
-/start.json
+/shirt_figure.json
